@@ -4,6 +4,9 @@ Changelog
 2.0 - unreleased
 ----------------
 
+* Ensure that a factory utility really isn't needed before removing it.
+  [lentinj]
+
 * Make sure the Title() and Description() accessors of containers return an
   encoded bytestring as expected for CMF-style accessors.
   [buchi]
